fixed the vertical scroll guide line/text, aligned everything for the base screen size.

--- a/client/src/components/Header/Header.scss
+++ b/client/src/components/Header/Header.scss
@@ -157,7 +157,7 @@
   }
 
   &--scrolled {
-    background-color: $deep;
+    background-color: $brunswick;
     box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
   }
 }
