--- a/client/src/sass/partials/_variables.scss
+++ b/client/src/sass/partials/_variables.scss
@@ -3,6 +3,7 @@
 $midnight: #322e34;
 $cream: #ffecd1;
 $cloud: #f8fffe;
+$orange: #fe5722;
 
 // Theme
 $brunswick: #31493c;
